// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureTooltip (multi) should not show close button / should show count 1`] = `
<Fragment>
  <FeatureProperties
    featureId="feature1"
    layerId="layer1"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={false}
  />
  <EuiHorizontalRule
    margin="xs"
  />
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem>
      <EuiText
        size="s"
      >
        <b>
          1
        </b>
         of 
        <b>
          3
        </b>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    />
  </EuiFlexGroup>
</Fragment>
`;

exports[`FeatureTooltip (multi) should show close button / should show count / should show arrows / should show layer filter 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiButtonIcon
        aria-label="Close tooltip"
        color="primary"
        data-test-subj="mapTooltipCloseButton"
        iconSize="m"
        iconType="cross"
        onClick={[Function]}
        type="button"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <FeatureProperties
    featureId="feature1"
    layerId="layer1"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={false}
  />
  <EuiHorizontalRule
    margin="xs"
  />
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem>
      <EuiText
        size="s"
      >
        <b>
          1
        </b>
         of 
        <b>
          3
        </b>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiPagination
        activePage={0}
        compressed={true}
        onPageClick={[Function]}
        pageCount={3}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`FeatureTooltip (multi) should show close button / should show count 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiButtonIcon
        aria-label="Close tooltip"
        color="primary"
        data-test-subj="mapTooltipCloseButton"
        iconSize="m"
        iconType="cross"
        onClick={[Function]}
        type="button"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <FeatureProperties
    featureId="feature1"
    layerId="layer1"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={false}
  />
  <EuiHorizontalRule
    margin="xs"
  />
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem>
      <EuiText
        size="s"
      >
        <b>
          1
        </b>
         of 
        <b>
          3
        </b>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiPagination
        activePage={0}
        compressed={true}
        onPageClick={[Function]}
        pageCount={3}
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`FeatureTooltip (single) should not show close button 1`] = `
<Fragment>
  <FeatureProperties
    featureId="feature1"
    layerId="layer1"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={false}
  />
</Fragment>
`;

exports[`FeatureTooltip (single) should show close button 1`] = `
<Fragment>
  <EuiFlexGroup
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiButtonIcon
        aria-label="Close tooltip"
        color="primary"
        data-test-subj="mapTooltipCloseButton"
        iconSize="m"
        iconType="cross"
        onClick={[Function]}
        type="button"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <FeatureProperties
    featureId="feature1"
    layerId="layer1"
    loadFeatureProperties={[Function]}
    onCloseTooltip={[Function]}
    showFilterButtons={false}
  />
</Fragment>
`;
